spotpython 0.18.8:

- lightdatamodule.py:
    - New function: setup restructured
- lightcrossvalidationdatamodule.py:
    - accepts verbosity as an argument


spotpython 0.18.7:

- Separate train and test data sets can be passed to Lightning DataModules

spotpython 0.18.6:

- split.py:
    New function: compute_lengths_from_fractions()
- lightdatamodule.py:
    train, val, test set computation updated

spotpython 0.18.4:
- architecture.py:
    documentation updated

spotpython 0.18.3:

- init.py:
    show_config=True set as Default 


spotpython 0.18.2:

- spot.py: 
    Class Spot has new attribute "verbosity. Can be set via fun_control["verbosity"].


spotpython 0.18.1:

- nn_linear_regression.py: 
train steo uses log as follows:
    self.log("train_loss", loss, on_step=False, on_epoch=True, prog_bar=False)


spotpython 0.18.0

spor.set_self_attribute() removed


spotpython 0.17.2:


- trainmodel.py:
    Tensorboard logger uses the argument name="".

    doumentation updated

- init.py:
    fun_control_init() function accepts additional arguments for Lightning.


spotpython-0.17.1

- improved get_device function

spotpython-0.17.0

- designs.py and spacefilling.py:
Naming Conventions: The class names have been capitalized to follow the PEP 8 convention for class naming:
1. `designs` -> `Designs`
2. `spacefilling` -> `SpaceFilling`

- The dimension of the design, k (int), must be specified by the user. There is not default dimension "2" anymore.


spotpython-0.16.19:

- kriging.py update completed

spotpython-0.16.15:

- initialize_matrices:
1. Simplified Penalty Calculation: Cached the variance calculation to a variable for clean reuse; reused it to set `pen_val` with efficient branching.
2. Consistent Attribute Initialization: Set `dtype` for arrays like `self.one` for float precision; ensured all attributes are either properly initialized or set to `None`.


spotpython-0.16.14:

- spotpython.utils.aggregate.py: aggregate_mean_var() updated: