@@ -1,3 +1,8 @@
+spotpython 0.18.11:
+
+- testmodel, predictmodel, and cvmodel functions updated, so that they can handle DataModules specified by the user in fun_control.
+
+
 spotpython 0.18.8:
 
 - lightdatamodule.py:
